--- a/README.org
+++ b/README.org
@@ -2,10 +2,11 @@
 为天地立心，为生民立命；为往圣继绝学，为万世开太平。
 #+end_quote
 
-* 已读
+*已读*
 
 - [[file:chinese-history/README.org][中国历史]]
+  + [[file:chinese-history/二月河-康雍乾系列.org][二月河：康雍乾帝王系列]]
 
-* 未读
+*未读*
 
 https://github.com/zhangjie2012/reading/issues
