--- a/chinese-history/二月河-康雍乾系列.org
+++ b/chinese-history/二月河-康雍乾系列.org
@@ -17,4 +17,18 @@
 
 * 总结
 
-* 附：书摘
+比较喜欢各个朝代的几个人物：康熙朝的魏东亭、周培公；雍正朝的李卫；乾隆朝的傅恒、刘墉。政绩贯穿几朝的有张廷玉、刘统勋。
+魏东亭和李卫主要是“忠”的代表，这是做任何事情的出发点，所以哪怕是做一些出格的事情，也能得到主子的原谅。而张廷玉、傅恒、刘墉父子则是“谨慎”，尤其是张廷玉的“万言万当，不如一默”，
+就算是我把整本书的故事情节全都忘了，这句话依然会记得。随着年龄越大越来越感觉到忠义、仁厚的重要性，而做人做事有敬畏心、谨慎才能保证自己安安稳稳、不翻车。
+
+无论是康熙、雍正、乾隆都非常勤奋，尤其是雍正史称在位 13 年，每天工作二十来个小时。在乾隆朝各种朝政、腐败问题都显露出来了，真的是乾隆不如康熙、雍正吗？
+我感觉不见得，这就是正常的历史规律。因为在几代人的努力下，乾隆朝太富有了，盛极必衰。“疾风知劲草，板荡识诚臣”，乱世才出英雄，越是盛世越容易出问题，这也是我们需要警惕的。
+
+这本书有没有缺点呢，有两个地方，是我不太理解的：
+
+1. 前两部书写的都是很好的，节奏也比较快。但是从乔引绨开始，和乾隆一朝加了很多乱伦、风尘的戏码，让人看的有种不是历史小说，而是言情爽文的感觉；
+   所以豆瓣评分诚不欺我，第三部的评分不足 8.0 也是有原因的；
+2. 梳理有很多地方突然会抛出“讲个笑话”，占了很大的篇幅，然而笑话其实并不好笑，看起来有点浪费时间。
+
+当然总体来说，瑕不掩瑜，这部分大块头，是值得一读的。我读这种历史性小说，主要是为了串起这段历史的关键人物和政治事件。毕竟直接去读严肃的历史，门槛较高，对我不太适合。
+缺点是未来再去看一些正史，会有些先入为主，但这些都不重要。我个人的理解是，读历史并不是说一定要纠结于谁“正”谁“野”，而是读书的过程中，有哪些收获。
