--- a/chinese-history/二月河-康雍乾系列.org
+++ b/chinese-history/二月河-康雍乾系列.org
@@ -28,7 +28,7 @@
 
 1. 前两部书写的都是很好的，节奏也比较快。但是从乔引绨开始，和乾隆一朝加了很多乱伦、风尘的戏码，让人看的有种不是历史小说，而是言情爽文的感觉；
    所以豆瓣评分诚不欺我，第三部的评分不足 8.0 也是有原因的；
-2. 梳理有很多地方突然会抛出“讲个笑话”，占了很大的篇幅，然而笑话其实并不好笑，看起来有点浪费时间。
+2. 书里有很多地方突然会抛出“讲个笑话”，占了很大的篇幅，然而笑话其实并不好笑，看起来有点浪费时间。
 
 当然总体来说，瑕不掩瑜，这部分大块头，是值得一读的。我读这种历史性小说，主要是为了串起这段历史的关键人物和政治事件。毕竟直接去读严肃的历史，门槛较高，对我不太适合。
 缺点是未来再去看一些正史，会有些先入为主，但这些都不重要。我个人的理解是，读历史并不是说一定要纠结于谁“正”谁“野”，而是读书的过程中，有哪些收获。
