--- a/README.org
+++ b/README.org
@@ -4,14 +4,14 @@
 为天地立心，为生民立命；为往圣继绝学，为万世开太平。
 #+end_quote
 
-* 待读列表
+** 待读列表
 
 https://github.com/zhangjie2012/reading/issues
 
-* 已读大纲
+** 已读大纲
 
 [[file:chinese-history/README.org][中国历史]]
 
-* 笔记
+** 笔记
 
 - <2024-02-04 Sun> [[file:chinese-history/二月河-康雍乾系列.org][二月河：康雍乾帝王系列]]
