--- a/chinese-history/README.org
+++ b/chinese-history/README.org
@@ -3,7 +3,7 @@
 * Table Of Content                                                      :TOC_3:
 - [[#背景][背景]]
 - [[#目标][目标]]
-- [[#横向][横向]]
+- [[#纵向][纵向]]
   - [[#夏商周][夏商周]]
   - [[#春秋战国][春秋战国]]
   - [[#秦前221年--前207年][秦（前221年 ~ 前207年）]]
@@ -21,7 +21,7 @@
   - [[#明1368年--1644年][明（1368年 ~ 1644年）]]
   - [[#清1636年--1912-年][清（1636年 ~ 1912 年）]]
   - [[#近代史1840年--1949年][近代史（1840年 ~ 1949年）]]
-- [[#纵向][纵向]]
+- [[#横向][横向]]
 - [[#纪录片][纪录片]]
 - [[#三方资料][三方资料]]
 
@@ -55,10 +55,10 @@
 <2023-11-19 Sun 15:49> Update：可选的书很多、时间是有限的，因此只读经典好书（豆瓣评分 8.0+）。
 
 <2023-12-03 Sun 17:53> Update：历史按照横向和纵向对已经读过的书进行分类：
-+ 横向：表示按照时间轴的（单个朝代的）
-+ 纵向：表示跨时间轴的（无法按照单个朝代归类的，比如通史类的）
++ 纵向：单个朝代的
++ 横向：跨多个朝代
 
-* 横向
+* 纵向
 
 ** 夏商周
 
@@ -132,16 +132,12 @@
 | 书名                         | 作者     | 阅读年份 | 评价 |
 |------------------------------+----------+----------+------|
 | 三国史话                     | 吕思勉   |  2022.06 | 优秀 |
-| 风起陇西                     | 马伯庸   |  2022.06 | 尚可 |
 | 品三国                       | 易中天   |  2022.07 | 优秀 |
 | [[https://book.douban.com/subject/36157153/][三国争霸（上、中、下）]]       | 渤海小吏 |  2023.05 | 优秀 |
 | 中国断代史系列：魏晋南北朝史 | 王仲荦   |  2021.06 | 优秀 |
 | 易中天中华史：南朝，北朝     | 易中天   |  2022.07 | 尚可 |
 | 易中天中华史：魏晋风度       | 易中天   |  2022.07 | 尚可 |
 |------------------------------+----------+----------+------|
-
-备注：
-- 《风起陇西》是三国后期背景下的小说，其时刘备已死
 
 ** 隋（581年 ~ 619年）
 
@@ -165,18 +161,14 @@
 |-------------------------+--------+----------+------|
 | 书名                    | 作者   | 阅读年份 | 评价 |
 |-------------------------+--------+----------+------|
-| 长安十二时辰            | 马伯庸 |  2022.05 | 尚可 |
 | [[https://book.douban.com/subject/30376497/][大唐兴亡三百年（全7册）]] | 王觉仁 |  2022.09 | 尚可 |
 | [[https://book.douban.com/subject/35475912/][武则天]]                  | 蒙曼   |  2022.11 | 尚可 |
 | [[https://book.douban.com/subject/35897928/][太平公主和她的时代]]      | 蒙曼   |  2022.11 | 一般 |
 | [[https://book.douban.com/subject/35897929/][唐玄宗]]                  | 蒙曼   |  2022.11 | 尚可 |
-| [[https://book.douban.com/subject/36104107/][长安的荔枝]]              | 马伯庸 |  2022.11 | 优秀 |
 |-------------------------+--------+----------+------|
 
 备注：
-
 1. 《太平公主和她的时代》内容与《武则天》和《唐玄宗》有些是重复的，后两本看了，可以不看这本
-2. 《长安十二时辰》《长安的荔枝》都是唐玄宗后期“安史之乱”前夕背景下的小说，《长安的荔枝》是安史之乱前一年
 
 ** 五代十国
 
@@ -210,14 +202,12 @@
 |-----------------------------------+--------+----------+------|
 | [[https://book.douban.com/subject/33443912/][细说宋朝：黎东方讲史之续]]          | 虞云国 |  2023.01 | 优秀 |
 | [[https://book.douban.com/subject/35477048/][文治帝国：大宋 300 年的世运和人物]] | 艾公子 |  2023.02 | 尚可 |
-| [[https://book.douban.com/subject/4000908/][金瓯缺（全四册）]]                  | 徐业兴 |  2023.04 | 优秀 |
 | [[https://book.douban.com/subject/34950734/][大宋国士·北宋卷]]                   | 陈启文 |  2023.06 | 一般 |
 | [[https://book.douban.com/subject/34950735/][大宋国士·南宋卷]]                   | 陈启文 |  2023.07 | 一般 |
 |-----------------------------------+--------+----------+------|
 
 备注：
 
-- 《金瓯缺》是小说，挺长的，要耐着性子读
 - 《大宋国士》两本书，很长，有点浪费时间，不值得一读（作者主观的东西太多、啰嗦、矫揉造作，尤其是南宋卷像是凑出来的），相比而言，更推荐《文治帝国》。
 
 ** 元
@@ -235,8 +225,6 @@
 | 书名               | 作者     |   阅读年份 | 评价 |
 |--------------------+----------+------------+------|
 | 万历十五年         | 黄仁宇   |       2021 | *神作* |
-| 显微镜下的大明     | 马伯庸   |       2021 | 尚可 |
-| 两京十五日         | 马伯庸   |    2022.04 | 尚可 |
 | 明朝那些事儿       | 当年明月 | 2023.08.26 | *神作* |
 | [[https://book.douban.com/subject/26692605/][大明王朝的七张面孔]] | 张宏杰   | 2023.09.09 | 尚可 |
 | [[https://book.douban.com/subject/6533042/][南明史]]             | 顾城     | 2023.10.24 | 优秀 |
@@ -246,8 +234,6 @@
 
 备注：
 
-- 《显微镜下的大明》不能算作小说，推荐看看
-- 《两京十五日》是朱瞻基登基之前时间点背景的小说，感觉比《长安十二时辰》好看一点
 - 《永历大帝》是纯小说，不太推荐
 
 ** 清（1636年 ~ 1912 年）
@@ -257,14 +243,13 @@
 |--------------------+--------+----------+------|
 | 书名               | 作者   | 阅读年份 | 评价 |
 |--------------------+--------+----------+------|
-| [[https://book.douban.com/subject/10605328/][红顶商人胡雪岩]]     | 高阳   |     2022 | 尚可 |
 | [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]] | 二月河 |  2023.12 | 优秀 |
 | [[https://book.douban.com/subject/1016595/][雍正皇帝（全三册）]] | 二月河 |  2023.12 | 优秀 |
 | [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]] | 二月河 |  2024.02 | 尚可 |
 |--------------------+--------+----------+------|
 
 ** 近代史（1840年 ~ 1949年）
-* 纵向
+* 横向
 
 |----------+--------+----------+------|
 | 书名     | 作者   | 阅读年份 | 评价 |
