--- a/chinese-history/README.org
+++ b/chinese-history/README.org
@@ -80,7 +80,6 @@
 | 流血的仕途：李斯与秦帝国         | 曹昇     |    2022.05 | 尚可 |
 |----------------------------------+----------+------------+------|
 
-
 ** 楚汉（前207年 ~ 前202年 ）
 
 |--------------------+----------+----------+------|
@@ -251,12 +250,14 @@
 ** 近代史（1840年 ~ 1949年）
 * 横向
 
-|----------+--------+----------+------|
-| 书名     | 作者   | 阅读年份 | 评价 |
-|----------+--------+----------+------|
-| 万古江河 | 许倬云 |     2021 | *神作* |
-| 说中国   | 许倬云 |     2021 | 优秀 |
-|----------+--------+----------+------|
+|----------------+--------+------------------+------|
+| 书名           | 作者   |         阅读年份 | 评价 |
+|----------------+--------+------------------+------|
+| 中国文化的精神 | 许倬云 |             2021 | 优秀 |
+| 万古江河       | 许倬云 |             2021 | *神作* |
+| 说中国         | 许倬云 |             2021 | 优秀 |
+| [[https://book.douban.com/subject/36472529/][经纬华夏]]       | 许倬云 | <2024-02-24 Sat> | 优秀 |
+|----------------+--------+------------------+------|
 
 * 纪录片
 
