--- a/README.org
+++ b/README.org
@@ -6,9 +6,9 @@
 
 ** 阅读大纲
 
-/只记录 2019 年之后读完的书，按优先级排序。/
+/只记录 2019 年之后读完的书，按优先级排序。每天阅读 30m 以上 。/
 
-1. [ ] [[file:chinese-history/README.org][中国历史]]
+1. [ ] [[file:chinese-history/README.org][中国历史]] *重点*
 2. [ ] [[file:chinese-literature/README.org][中国文学]]
 3. [ ] [[file:world-history/README.org][世界历史]]
 4. [ ] 国外文学
