--- a/README.org
+++ b/README.org
@@ -25,3 +25,4 @@ https://github.com/zhangjie2012/reading/issues
 
 - <2024-02-04 Sun> [[file:chinese-history/二月河-康雍乾系列.org][二月河：康雍乾帝王系列]]
 - <2024-02-25 Sun> [[file:chinese-history/许倬云-经纬华夏.org][许倬云：经纬华夏]]
+- <2024-03-03 Sun> [[file:chinese-history/张宏杰-饥饿的盛世.org][张宏杰：饥饿的盛世]]
