--- a/chinese-history/README.org
+++ b/chinese-history/README.org
@@ -239,25 +239,26 @@
 
 共历 12 帝，276 年。
 
-|--------------------+--------+----------+------|
-| 书名               | 作者   | 阅读年份 | 评价 |
-|--------------------+--------+----------+------|
-| [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]] | 二月河 |  2023.12 | 优秀 |
-| [[https://book.douban.com/subject/1016595/][雍正皇帝（全三册）]] | 二月河 |  2023.12 | 优秀 |
-| [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]] | 二月河 |  2024.02 | 尚可 |
-|--------------------+--------+----------+------|
+|------------------------------+--------+------------+------|
+| 书名                         | 作者   |   阅读年份 | 评价 |
+|------------------------------+--------+------------+------|
+| [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]]           | 二月河 |    2023.12 | 优秀 |
+| [[https://book.douban.com/subject/1016595/][雍正皇帝（全三册）]]           | 二月河 |    2023.12 | 优秀 |
+| [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]]           | 二月河 |    2024.02 | 尚可 |
+| [[https://book.douban.com/subject/35888701/][饥饿的盛世：乾隆时代的得与失]] | 张宏杰 | 2024.03.03 | 优秀 |
+|------------------------------+--------+------------+------|
 
 ** 近代史（1840年 ~ 1949年）
 * 横向
 
-|----------------+--------+------------------+------|
-| 书名           | 作者   |         阅读年份 | 评价 |
-|----------------+--------+------------------+------|
-| 中国文化的精神 | 许倬云 |             2021 | 优秀 |
-| 万古江河       | 许倬云 |             2021 | *神作* |
-| 说中国         | 许倬云 |             2021 | 优秀 |
-| [[https://book.douban.com/subject/36472529/][经纬华夏]]       | 许倬云 | <2024-02-24 Sat> | 优秀 |
-|----------------+--------+------------------+------|
+|----------------+--------+------------+------|
+| 书名           | 作者   |   阅读年份 | 评价 |
+|----------------+--------+------------+------|
+| 中国文化的精神 | 许倬云 |       2021 | 优秀 |
+| 万古江河       | 许倬云 |       2021 | *神作* |
+| 说中国         | 许倬云 |       2021 | 优秀 |
+| [[https://book.douban.com/subject/36472529/][经纬华夏]]       | 许倬云 | 2024-02-24 | 优秀 |
+|----------------+--------+------------+------|
 
 * 纪录片
 
