--- a/chinese-history/README.org
+++ b/chinese-history/README.org
@@ -220,16 +220,16 @@
 - 应天府（今南京）
 - 顺天府（今北京）
 
-|--------------------+----------+------------+------|
-| 书名               | 作者     |   阅读年份 | 评价 |
-|--------------------+----------+------------+------|
-| 万历十五年         | 黄仁宇   |       2021 | *神作* |
-| 明朝那些事儿       | 当年明月 | 2023.08.26 | *神作* |
-| [[https://book.douban.com/subject/26692605/][大明王朝的七张面孔]] | 张宏杰   | 2023.09.09 | 尚可 |
-| [[https://book.douban.com/subject/6533042/][南明史]]             | 顾城     | 2023.10.24 | 优秀 |
-| [[https://book.douban.com/subject/27028223/][永历大帝]]           | 云石     | 2023.11.07 | 尚可 |
-| [[https://book.douban.com/subject/26925171/][大明王朝1566]]       | 刘和平   | 2023.11.15 | *神作* |
-|--------------------+----------+------------+------|
+|--------------------+----------+------------+--------|
+| 书名               | 作者     |   阅读年份 | 评价   |
+|--------------------+----------+------------+--------|
+| 万历十五年         | 黄仁宇   |       2021 | *神作*   |
+| 明朝那些事儿       | 当年明月 | 2023.08.26 | *优秀* |
+| [[https://book.douban.com/subject/26692605/][大明王朝的七张面孔]] | 张宏杰   | 2023.09.09 | 尚可   |
+| [[https://book.douban.com/subject/6533042/][南明史]]             | 顾城     | 2023.10.24 | *神作*   |
+| [[https://book.douban.com/subject/27028223/][永历大帝]]           | 云石     | 2023.11.07 | 尚可   |
+| [[https://book.douban.com/subject/26925171/][大明王朝1566]]       | 刘和平   | 2023.11.15 | *优秀*   |
+|--------------------+----------+------------+--------|
 
 备注：
 
@@ -239,14 +239,15 @@
 
 共历 12 帝，276 年。
 
-|------------------------------+--------+------------+------|
-| 书名                         | 作者   |   阅读年份 | 评价 |
-|------------------------------+--------+------------+------|
-| [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]]           | 二月河 |    2023.12 | 优秀 |
-| [[https://book.douban.com/subject/1016595/][雍正皇帝（全三册）]]           | 二月河 |    2023.12 | 优秀 |
-| [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]]           | 二月河 |    2024.02 | 尚可 |
-| [[https://book.douban.com/subject/35888701/][饥饿的盛世：乾隆时代的得与失]] | 张宏杰 | 2024.03.03 | 优秀 |
-|------------------------------+--------+------------+------|
+|------------------------------+-------------+------------+------|
+| 书名                         | 作者        |   阅读年份 | 评价 |
+|------------------------------+-------------+------------+------|
+| [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]]           | 二月河      |    2023.12 | 优秀 |
+| [[https://book.douban.com/subject/1016595/][雍正皇帝（全三册）]]           | 二月河      |    2023.12 | 优秀 |
+| [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]]           | 二月河      |    2024.02 | 尚可 |
+| [[https://book.douban.com/subject/35888701/][饥饿的盛世：乾隆时代的得与失]] | 张宏杰      | 2024.03.03 | 优秀 |
+| [[https://book.douban.com/subject/26988219/][洪业：清朝开国史]]             | [美] 魏斐德 | 2024.03.19 | 优秀 |
+|------------------------------+-------------+------------+------|
 
 ** 近代史（1840年 ~ 1949年）
 * 横向
