--- a/chinese-history/README.org
+++ b/chinese-history/README.org
@@ -247,6 +247,7 @@
 | [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]]           | 二月河      |    2024.02 | 尚可 |
 | [[https://book.douban.com/subject/35888701/][饥饿的盛世：乾隆时代的得与失]] | 张宏杰      | 2024.03.03 | 优秀 |
 | [[https://book.douban.com/subject/26988219/][洪业：清朝开国史]]             | [美] 魏斐德 | 2024.03.19 | 优秀 |
+| [[https://book.douban.com/subject/36574408/][大变局：晚清改革五十年]]       | 谌旭彬      | 2024.04.16 | 优秀 |
 |------------------------------+-------------+------------+------|
 
 ** 近代史（1840年 ~ 1949年）
