--- a/chinese-history/谌旭彬-大变局.org
+++ b/chinese-history/谌旭彬-大变局.org
@@ -1,11 +1,35 @@
 #+TITLE: 读完谌旭彬《大变局：晚清改革五十年》
 #+DATE: 2024-04-15
 
-** TODO 简介
+** 简介
+
+[[file:imgs/20240415.png]]
 
 豆瓣评分：8.8 分
 
-** TODO 总结
+#+begin_quote
+1861年，咸丰皇帝逃往承德，并死于避暑山庄。为了壮大国力，摆脱面对西方的弱势局面，在慈禧和奕䜣的带领下，大清王朝开启了自上而下的变革之路。
+
+改革之路，并非一帆风顺，通过总理衙门的创设、同文馆的建立、近代海关系统的引入、洋务军工企业的创办、外交使团的西行、广学会的成立、
+废除武举、昆明湖里练兵等事件，大清并未走向愿望中的强大，而是一步步走向了帝国的灭亡。
+
+在1861-1911这五十年里，有许多历史人物值得关注和研究，如缺乏理政常识的太后、连汉献帝都不如的光绪、
+被逐离政坛的恭亲王等权谋与争斗不绝如缕的清廷高层；还有深埋改革主张的冯桂芬、选择性“开眼看世界”的斌椿、时代的出局者徐继畬、身陷教案的曾国藩等有挣扎但又怯懦的官僚士大夫；同时也有挑战君权神圣的严复、要做陈涉的官二代谭嗣同等图变图强的有识之士；也有在天下观与国家观的碰撞时，
+作为惨淡时代中流砥柱，但又困于传统礼教之中难以自拔的乡绅；以及生活本就已经支离破碎、濒临崩溃的底层民众。
+#+end_quote
+
+[[file:imgs/20240415-2.jpg]]
+
+** 总结
+
+本书按照年份讲解了晚清最后五十年应对世界走向工业化的道路上的大变局，清朝政府和核心骨干的应对策略。
+
+特色是按照年份，一年一个章节，然而看起来会有点累，因为在章节里会跨年份讲解一些人和事（这也没办法）。
+可以了解一个大概，但涉及到很多政治事件比较粗略，如：太平天国、义和团、甲午战争、百日维新等，还需要单独去了解，
+
+整体是一本不错的书，要我评价的话，8.0 差不多，8.8 应该够不上：前 2/3 都是很不错的，到后面感觉差了一点。
+
+对于晚清这段政治的评价，只能说一地鸡毛，错过了太多太多的机会了。天时、地利、人和放一起全都错过了，除了归结于“国运”不行了，也没啥可说的。
 
 ** 书摘
 
