org migrate to md

--- a/chinese-history/二月河-康雍乾系列.md
+++ b/chinese-history/二月河-康雍乾系列.md
@@ -1,21 +1,22 @@
-#+TITLE: 读完二月河“康雍乾”帝王系列
-#+DATE: 2024-02-04
+# 读完二月河“康雍乾”帝王系列
 
-** 简介
+DATE: 2024-02-04
+
+## 简介
 
 二月河帝王系列包括了以下三本书，描写了康熙、雍正、乾隆三个帝王从潜邸到驾崩前前后后的历史人物和政治事件：
 
-1. [[https://book.douban.com/subject/4162705/][康熙大帝（全四册）]]豆瓣评分：8.5 分
-2. [[https://book.douban.com/subject/4162706/][雍正皇帝（全三册）]]豆瓣评分：8.6 分
-3. [[https://book.douban.com/subject/1095889/][乾隆皇帝（全六册）]]豆瓣评分：7.7 分
+1. [康熙大帝（全四册）](https://book.douban.com/subject/4162705/)豆瓣评分：8.5 分
+2. [雍正皇帝（全三册）](https://book.douban.com/subject/4162706/)豆瓣评分：8.6 分
+3. [乾隆皇帝（全六册）](https://book.douban.com/subject/1095889/)豆瓣评分：7.7 分
 
 一共 13 册，465.7 万字。
 
-[[./imgs/20240204.jpg]]
+![img](./imgs/20240204.jpg)
 
 平均每天读一个小时左右，跨了快三个月才读完。非常厚，尤其是《乾隆皇帝》，总长度差不多是前两本的加和。
 
-** 总结
+## 总结
 
 比较喜欢各个朝代的几个人物：康熙朝的魏东亭、周培公；雍正朝的李卫；乾隆朝的傅恒、刘墉。政绩贯穿几朝的有张廷玉、刘统勋。
 魏东亭和李卫主要是“忠”的代表，这是做任何事情的出发点，所以哪怕是做一些出格的事情，也能得到主子的原谅。而张廷玉、傅恒、刘墉父子则是“谨慎”，尤其是张廷玉的“万言万当，不如一默”，
@@ -27,7 +28,7 @@
 这本书有没有缺点呢，有两个地方，是我不太理解的：
 
 1. 前两部书写的都是很好的，节奏也比较快。但是从乔引绨开始，和乾隆一朝加了很多乱伦、风尘的戏码，让人看的有种不是历史小说，而是言情爽文的感觉；
-   所以豆瓣评分诚不欺我，第三部的评分不足 8.0 也是有原因的；
+    所以豆瓣评分诚不欺我，第三部的评分不足 8.0 也是有原因的；
 2. 书里有很多地方突然会抛出“讲个笑话”，占了很大的篇幅，然而笑话其实并不好笑，看起来有点浪费时间。
 
 当然总体来说，瑕不掩瑜，这部分大块头，是值得一读的。我读这种历史性小说，主要是为了串起这段历史的关键人物和政治事件。毕竟直接去读严肃的历史，门槛较高，对我不太适合。
