--- a/chinese-history/许倬云-经纬华夏.md
+++ b/chinese-history/许倬云-经纬华夏.md
@@ -1,25 +1,24 @@
-#+TITLE: 读完许倬云《经纬华夏》
-#+DATE: 2024-02-25
+# 读完许倬云《经纬华夏》
 
-** 简介
+DATE: 2024-02-25
 
-- [[https://book.douban.com/subject/36472529/][经纬华夏]] 豆瓣评分：8.4 分。
+## 简介
 
-#+begin_quote
-“我要从世界看中国，再从中国看世界。”
+[经纬华夏](https://book.douban.com/subject/36472529/) 豆瓣评分：8.4 分。
 
-围绕着这一发端，著名历史学家许倬云以九十高龄迎难而上，八易其稿，结撰出一部华夏文明从成长到成型的传记。作者跳脱出中国文化内部演变的叙述，以“大历史”的观看视角与思维方式，对华夏内外的历史互动进行了全新的归纳排列，再现了中国大地上人群、族群、文化互动融合的轨迹。
-
-在超越五千年的长程叙述中，作者借由对中国地方性文化如何交缠为一，以及中国如何应对来自世界之冲击的细致分析，最终揭示了华夏文明能够延续至今，并将绵延永在的核心与奥秘，以赤子之心瞻见了一个有根底、有方向的中国。
-#+end_quote
+> “我要从世界看中国，再从中国看世界。”
+>
+> 围绕着这一发端，著名历史学家许倬云以九十高龄迎难而上，八易其稿，结撰出一部华夏文明从成长到成型的传记。作者跳脱出中国文化内部演变的叙述，以“大历史”的观看视角与思维方式，对华夏内外的历史互动进行了全新的归纳排列，再现了中国大地上人群、族群、文化互动融合的轨迹。
+>
+> 在超越五千年的长程叙述中，作者借由对中国地方性文化如何交缠为一，以及中国如何应对来自世界之冲击的细致分析，最终揭示了华夏文明能够延续至今，并将绵延永在的核心与奥秘，以赤子之心瞻见了一个有根底、有方向的中国。
 
 18.4 万字。
 
-[[./imgs/20240225.jpg]]
+![img](./imgs/20240225.jpg)
 
-从 2023 年低开始读，过年没看，年后继续读，断断续续读了快 7 个小时。本书不算长。
+从 2023 年底开始读，过年没看，年后继续读，断断续续读了快 7 个小时。本书不算长。
 
-** 总结
+## 总结
 
 许倬云是我非常喜欢一位历史学家，他符合我对于一个做学问的人、为人师表的形象。之前曾经读过他写的《万古江河》、《说中国》、《中国文化的精神》，都非常喜欢。
 
@@ -27,7 +26,7 @@
 
 另外，电子书不太适合阅读此类书，而且读一遍是远远不够的，未来买成纸质书，放在书架上值得多看几遍。
 
-** 书摘
+## 书摘
 
 - 中国的成长不是依靠帝国的征服，是一拨又一拨人通过持续的努力而慢慢形成的。所以中国没有边界，中国是一个天下国家，是一层层文化的自然发展。
 - 自从西周以后，中国内、外之间的区别，乃是一个多重结构的共同体的内和外，不是单纯的华夏和夷狄，而是“网内”与“网外”多层次的我者与他者。
