--- a/chinese-history/谌旭彬-大变局.md
+++ b/chinese-history/谌旭彬-大变局.md
@@ -1,26 +1,23 @@
-#+TITLE: 读完谌旭彬《大变局：晚清改革五十年》
-#+DATE: 2024-04-15
+# 读完谌旭彬《大变局：晚清改革五十年》
 
-** 简介
+DATE: 2024-04-15
 
-[[file:imgs/20240415.png]]
+![img](imgs/20240415.png)
 
 豆瓣评分：8.8 分
 
-#+begin_quote
-1861年，咸丰皇帝逃往承德，并死于避暑山庄。为了壮大国力，摆脱面对西方的弱势局面，在慈禧和奕䜣的带领下，大清王朝开启了自上而下的变革之路。
+> 1861年，咸丰皇帝逃往承德，并死于避暑山庄。为了壮大国力，摆脱面对西方的弱势局面，在慈禧和奕䜣的带领下，大清王朝开启了自上而下的变革之路。
+>
+> 改革之路，并非一帆风顺，通过总理衙门的创设、同文馆的建立、近代海关系统的引入、洋务军工企业的创办、外交使团的西行、广学会的成立、
+> 废除武举、昆明湖里练兵等事件，大清并未走向愿望中的强大，而是一步步走向了帝国的灭亡。
+>
+> 在1861-1911这五十年里，有许多历史人物值得关注和研究，如缺乏理政常识的太后、连汉献帝都不如的光绪、
+> 被逐离政坛的恭亲王等权谋与争斗不绝如缕的清廷高层；还有深埋改革主张的冯桂芬、选择性“开眼看世界”的斌椿、时代的出局者徐继畬、身陷教案的曾国藩等有挣扎但又怯懦的官僚士大夫；同时也有挑战君权神圣的严复、要做陈涉的官二代谭嗣同等图变图强的有识之士；也有在天下观与国家观的碰撞时，
+> 作为惨淡时代中流砥柱，但又困于传统礼教之中难以自拔的乡绅；以及生活本就已经支离破碎、濒临崩溃的底层民众。
 
-改革之路，并非一帆风顺，通过总理衙门的创设、同文馆的建立、近代海关系统的引入、洋务军工企业的创办、外交使团的西行、广学会的成立、
-废除武举、昆明湖里练兵等事件，大清并未走向愿望中的强大，而是一步步走向了帝国的灭亡。
+![img](imgs/20240415-2.jpg)
 
-在1861-1911这五十年里，有许多历史人物值得关注和研究，如缺乏理政常识的太后、连汉献帝都不如的光绪、
-被逐离政坛的恭亲王等权谋与争斗不绝如缕的清廷高层；还有深埋改革主张的冯桂芬、选择性“开眼看世界”的斌椿、时代的出局者徐继畬、身陷教案的曾国藩等有挣扎但又怯懦的官僚士大夫；同时也有挑战君权神圣的严复、要做陈涉的官二代谭嗣同等图变图强的有识之士；也有在天下观与国家观的碰撞时，
-作为惨淡时代中流砥柱，但又困于传统礼教之中难以自拔的乡绅；以及生活本就已经支离破碎、濒临崩溃的底层民众。
-#+end_quote
-
-[[file:imgs/20240415-2.jpg]]
-
-** 总结
+## 总结
 
 本书按照年份讲解了晚清最后五十年应对世界走向工业化的道路上的大变局，清朝政府和核心骨干的应对策略。
 
@@ -31,7 +28,7 @@
 
 对于晚清这段政治的评价，只能说一地鸡毛，错过了太多太多的机会了。天时、地利、人和放一起全都错过了，除了归结于“国运”不行了，也没啥可说的。
 
-** 书摘
+## 书摘
 
 本书的主题，是晚清的改革与转型。具体而言，是咸丰十一年(1861)到宣统三年(1911)的改革历程。
 
@@ -59,7 +56,7 @@
 民众对劳作所产缺乏支配权，其劳作热情必然骤减；当民众开始在土地上磨洋工，仅满足于生产其必需口粮时，必然与天国的征粮系统发生严重冲突。在缺乏民意制衡机制的时代，官僚征粮系统毫无意外将在面对普通民众时拥有绝对优势。事情如此这般发展下去，结局可想而知。
 
 早在明末清初，利玛窦、南怀仁等传教士携西学来华，知识分子们便喜欢以“老子化胡”式的想象来理解西学，以保持对中学的自信。
-比如黄宗羲曾说“勾股之术，乃周公商高之遗，而后人失之，使西人得以窃其传”[插图]，他发现传教士输入的毕达哥拉斯定理与中国的勾三股四弦五之术相通，遂认定是西方人“窃”了中国的勾股之术。
+比如黄宗羲曾说“勾股之术，乃周公商高之遗，而后人失之，使西人得以窃其传”，他发现传教士输入的毕达哥拉斯定理与中国的勾三股四弦五之术相通，遂认定是西方人“窃”了中国的勾股之术。
 黄无视了“各自独立发现”的可能，也忽略了理论提炼与现象觉察之间的差别。
 
 内有“学术界”拥护，外有传教士认同，“西学起源于中学”之说很自然地成了康雍乾嘉时代的主流论调。该论调囊括的范围也越来越大，不再仅仅局限于历法。
@@ -71,17 +68,17 @@
 
 每一个问题，都深深地触及清帝国知识界根深蒂固的自信心，引发他们心理上的抵制与排斥。不愿回答，也不愿解决问题时，最好的办法便是解决掉那个提出问题的人。时代不喜欢徐继畬打开的那个世界，不愿承认那个世界是真的，所以时代主动将徐继畬和他的《瀛寰志略》淘汰出局了。
 
-出使欧美之前，蒲安臣特意为中国制作了一面黄色的国旗：“蓝镶边，中绘龙一尺三长，宽二尺，与使者命驾之时以为前驱。”[插图]自此，龙旗成为晚清中国的一个象征。中国也首次以主权国家的面目出现在国际社会中。
+出使欧美之前，蒲安臣特意为中国制作了一面黄色的国旗：“蓝镶边，中绘龙一尺三长，宽二尺，与使者命驾之时以为前驱。”自此，龙旗成为晚清中国的一个象征。中国也首次以主权国家的面目出现在国际社会中。
 
-*一个人能否获得对事物的正确认知，既取决于他是否有能力获取充分的信息，也取决于他是否拥有处理这些信息的正确思维工具。*
+**一个人能否获得对事物的正确认知，既取决于他是否有能力获取充分的信息，也取决于他是否拥有处理这些信息的正确思维工具。**
 
 其实，改革的真正阻力从来不在江湖，而在庙堂。
 
 自称“我等不得主意”的慈禧，其实早已打定了主意。“和局固宜保全”是高调的口号不妨多喊，与洋人开战则万万不行；“民心尤不可失”是朝廷不能直接表态说要惩办参与打杀的民众，但这个事要做且不妨交给曾国藩来做。
 
-*对事物的准确认知，来自正确的逻辑与充足的证据。前者提供思维工具，后者提供思维原料。*
+**对事物的准确认知，来自正确的逻辑与充足的证据。前者提供思维工具，后者提供思维原料。**
 
-自1842年的北京教案[插图]，至1911年的长武教案，教民冲突绵延了整整70年，可谓与整个晚清相始终。其持续时间之久、产生纠纷之多、酿成血案之深，同期其他任何外交事件都望尘莫及。教案冲突的结果往往也是双输。
+自1842年的北京教案，至1911年的长武教案，教民冲突绵延了整整70年，可谓与整个晚清相始终。其持续时间之久、产生纠纷之多、酿成血案之深，同期其他任何外交事件都望尘莫及。教案冲突的结果往往也是双输。
 
 后世的局外人可以用“文明—野蛮”这种二元分析模式，来解释许多历史问题，包括晚清频发的教案。但“可以解释问题”不等于“可以解决问题”。
 
@@ -99,7 +96,7 @@
 
 有见识者权力基础不稳固，权力基础稳固者无见识，这是晚清改革最深的痼疾。
 
-自1876年起，至1878年止，中国北方遭遇了一场旷日持久的罕见旱灾，灾民人数达1.6亿至2亿左右，[插图]死于饥荒和疫病的人数至少在1000万人，从重灾区逃亡外地的灾民达2000万人。1877—1878年是灾情最严重的两年，1877年是丁丑年，1878年是戊寅年。所以这场人间惨剧，史称“丁戊奇荒”。
+自1876年起，至1878年止，中国北方遭遇了一场旷日持久的罕见旱灾，灾民人数达1.6亿至2亿左右，死于饥荒和疫病的人数至少在1000万人，从重灾区逃亡外地的灾民达2000万人。1877—1878年是灾情最严重的两年，1877年是丁丑年，1878年是戊寅年。所以这场人间惨剧，史称“丁戊奇荒”。
 
 在政府收入与民众温饱之间，清廷的最高决策层，自慈禧、奕訢而下至李鸿章、刘坤一这些地方督抚，均一致选择了前者。鲜有人像郭嵩焘那般，将“民为贵，社稷次之，君为轻”之说当真。
 
@@ -109,7 +106,7 @@
 
 1875年，日本禁止琉球入贡中国，禁止受中国册封，禁止奉中国为正朔，要求其奉行明治年号，遵行日本法律，并允许日本派兵驻屯。次年，琉球秘密遣人来华向清廷求援，无果。1879年3月，日本派军警部队强占琉球王宫，将琉球王室送往东京。琉球就此亡国，成了日本的“冲绳县”。
 
-在密室外交模式下，只要事情不碰触爱新觉罗皇室的统治权这一底线，总理衙门总是倾向于少冒一点风险，多做一点妥协。巴夏礼曾将这种路径依赖嘲讽为“心甘情愿对它所受的侵略付出报酬”[插图]
+在密室外交模式下，只要事情不碰触爱新觉罗皇室的统治权这一底线，总理衙门总是倾向于少冒一点风险，多做一点妥协。巴夏礼曾将这种路径依赖嘲讽为“心甘情愿对它所受的侵略付出报酬”
 
 朝廷真正的担忧是洋人有了电报线路之后，一方面这会给国防和外交带来麻烦，这与担忧铁路会让列强的军队朝发夕至是相同的思维模式，另一方面担忧生出许多外交事端。
 
@@ -125,7 +122,7 @@
 
 爱读圣贤书者也好，喜欢办洋务者也罢，只要愿意切身介入现实政治，愿意切身接触外部世界，便不难明白什么可以保留，什么应该改革。就像一个人，站在岸上看别人划船，会有许多不切实际的指手画脚；等到自己成了船上的水手，就会明白以前那些指手画脚是多么可笑。
 
-*当一个人以错误的认知和错误的手段，凭着不自知的外部因素竟然取得了成功，那么，在未来，她大概率会将这些错误认知与错误手段当作成功经验，再玩一把。*
+**当一个人以错误的认知和错误的手段，凭着不自知的外部因素竟然取得了成功，那么，在未来，她大概率会将这些错误认知与错误手段当作成功经验，再玩一把。**
 
 严复说，中国的统治者力图使历史停滞在一个特定阶段，因为他们追求的不是社会进步，而是社会平衡。
 
@@ -150,4 +147,4 @@
 清廷亡于慈禧，并不是因为慈禧“害先帝、立幼主，授载沣以重器”，而是她无力有效应对前所未有的时代变局——政治人物对时代的影响与许多因素有关，其中最重要的三点，是见识、权术与实力。
 在转型时代，又以见识最为重要。权术与实力决定了影响的力度，见识决定着影响的方向。方向错了，影响的力度越大，损害往往也越大。慈禧太后面对的，恰是一个前所未有的转型时代；她自己也恰是一个有实力、有权术却无见识之
 
-*在这样畸形的社会里苟且太久，苟且会慢慢变成生活的一部分，苟且的原始意味会慢慢消失，苟且会被美化，会变成理所当然和不容置疑。*
+**在这样畸形的社会里苟且太久，苟且会慢慢变成生活的一部分，苟且的原始意味会慢慢消失，苟且会被美化，会变成理所当然和不容置疑。**
