--- a/chinese-history/魏斐德-洪业-清朝开国史.md
+++ b/chinese-history/魏斐德-洪业-清朝开国史.md
@@ -1,19 +1,18 @@
-#+TITLE: 读完魏斐德《洪业：清朝开国史》
-#+DATE: 2024-03-19
+# 读完魏斐德《洪业：清朝开国史》
 
-** 简介
+DATE: 2024-03-19
 
-[[./imgs/20240319-2.png]]
+## 简介
 
-[[https://book.douban.com/subject/1132689/][洪业：清朝开国史]] 豆瓣评分：8.7 分，51.6 万字。
+![img](./imgs/20240319-2.png)
 
-#+begin_quote
-本书选择了明清嬗代过程为论述对象，从政治、经济、文化、社会、民族诸多方面进行剖析，揭示帝国秩序崩解与重建的过程等。
-#+end_quote
+[洪业：清朝开国史](https://book.douban.com/subject/1132689/) 豆瓣评分：8.7 分，51.6 万字。
 
-[[./imgs/20240319.jpg]]
+> 本书选择了明清嬗代过程为论述对象，从政治、经济、文化、社会、民族诸多方面进行剖析，揭示帝国秩序崩解与重建的过程等。
 
-** 总结
+![img](./imgs/20240319.jpg)
+
+## 总结
 
 比较严肃的历史书，人物太多，读起来有点费劲，但是写的很好。
 
@@ -21,18 +20,18 @@
 
 这两本书适合收藏，以后要买纸质书来看。专业度太高，不太好评价，但是做了很多书摘，可以看看。
 
-** 书摘
+## 书摘
 
-1. 从1626年到1640年，罕见的自然灾害席卷中国大地，严重的干旱和洪涝接踵而至。接连不断的饥荒，伴随着蝗灾和天花，导致人口大量死亡。经过这场浩劫，晚明的人口总数大幅度下降。有的学者甚至提出，从1585年到1645年，中国人口可能减少了40%。
-2. 清朝统治的巩固，也经历了一个漫长过程。它开始于在明朝北边的准备阶段，经过入关后对明朝旧制加以沿用和调整的试验阶段，最后产生了一种汉、满两种统治方式的精妙融合物。在这种统治方式下，满人和汉人都不得不接受清廷握有最高权力这一现实，尽管这一权力原来并不是它所拥有的。
-3. 在满族统治下的蒙、汉人中，被“收”为“民户”，从而与满族人处于同等社会地位者，和被“获”为“人畜”、并分赐将士充当奴隶者，处境大不相同。后者被称为“包衣”，其经济功能大不一样。其中一部分完全是满族人的家奴。
-   另一部分则在努尔哈赤及其他满洲贵族自1596年创立的由庄头管理的拖克索（田庄）中从事耕作。
-4. 八旗制度是大汗努尔哈赤对全部军队的直接控制权和各贝勒之贵族特权的一种调合物。
-5. 嘉兴望族的财富和权势得以数百年不衰的真正原因，是他们采取了这样一种成功的手段，即为了使自己的家族获得新的人才与财源，精心筹划同那些正在上升的暴发户通婚。
-6. 来自山东临清的报告说，当地人民3/10死于饥荒，3/10死于疾疫，其余4/10则被迫为盗，以劫掠为生。而临清以南的东昌一带，所有村镇都化为一片废墟。
-7. 1633年，在皇太极欲将金朝作为自己治国的楷模之时，正是宁完我向他提出，要理解文治的艺术，就应阅读“四书”；要改进战术，就应研究孙子等军事家的著作；要探究王朝兴衰之理，就应求助于《资治通鉴》。
-8. 其实，自1631年大凌河城陷落后，就再未发生过严格意义上的满汉之间的战争。从那以后，后金的许多作战计划和准备工作都是由汉人指导的，所以将此后的战争描述为东北边地武人集团同明朝的斗争，或许更为确切。
-9. 满清比较完整地接管了明朝的中央政府，遂拥有了他们颇为缺乏的东西，由此接收了明朝几乎全部汉族官吏，依靠他们接管天下并最后征服南方。崇祯帝的决定还导致诸多皇室宗亲之继承权利的暧昧不定，以致派系倾轧削弱了南明政权。
+1.  从1626年到1640年，罕见的自然灾害席卷中国大地，严重的干旱和洪涝接踵而至。接连不断的饥荒，伴随着蝗灾和天花，导致人口大量死亡。经过这场浩劫，晚明的人口总数大幅度下降。有的学者甚至提出，从1585年到1645年，中国人口可能减少了40%。
+2.  清朝统治的巩固，也经历了一个漫长过程。它开始于在明朝北边的准备阶段，经过入关后对明朝旧制加以沿用和调整的试验阶段，最后产生了一种汉、满两种统治方式的精妙融合物。在这种统治方式下，满人和汉人都不得不接受清廷握有最高权力这一现实，尽管这一权力原来并不是它所拥有的。
+3.  在满族统治下的蒙、汉人中，被“收”为“民户”，从而与满族人处于同等社会地位者，和被“获”为“人畜”、并分赐将士充当奴隶者，处境大不相同。后者被称为“包衣”，其经济功能大不一样。其中一部分完全是满族人的家奴。
+    另一部分则在努尔哈赤及其他满洲贵族自1596年创立的由庄头管理的拖克索（田庄）中从事耕作。
+4.  八旗制度是大汗努尔哈赤对全部军队的直接控制权和各贝勒之贵族特权的一种调合物。
+5.  嘉兴望族的财富和权势得以数百年不衰的真正原因，是他们采取了这样一种成功的手段，即为了使自己的家族获得新的人才与财源，精心筹划同那些正在上升的暴发户通婚。
+6.  来自山东临清的报告说，当地人民3/10死于饥荒，3/10死于疾疫，其余4/10则被迫为盗，以劫掠为生。而临清以南的东昌一带，所有村镇都化为一片废墟。
+7.  1633年，在皇太极欲将金朝作为自己治国的楷模之时，正是宁完我向他提出，要理解文治的艺术，就应阅读“四书”；要改进战术，就应研究孙子等军事家的著作；要探究王朝兴衰之理，就应求助于《资治通鉴》。
+8.  其实，自1631年大凌河城陷落后，就再未发生过严格意义上的满汉之间的战争。从那以后，后金的许多作战计划和准备工作都是由汉人指导的，所以将此后的战争描述为东北边地武人集团同明朝的斗争，或许更为确切。
+9.  满清比较完整地接管了明朝的中央政府，遂拥有了他们颇为缺乏的东西，由此接收了明朝几乎全部汉族官吏，依靠他们接管天下并最后征服南方。崇祯帝的决定还导致诸多皇室宗亲之继承权利的暧昧不定，以致派系倾轧削弱了南明政权。
 10. 自杀殉难者中有许多人已经在文官仕途中完成了他们的使命，而大量投降者则是仕途生涯刚刚开始，或达到顶峰的较年轻官员。
 11. 李自成虽然自认为是在效法唐朝开国之君来接管京师的，而实际上他却同公元880年占领长安的黄巢一样，连自己的将领都控制不住。二者都因为其部将的残暴而使京城百姓离心离德，其政权也被证明是非常短命的。
 12. 福临于1643年10月8日即位为顺治帝，在两位摄政王——即多尔衮和著名将领郑亲王济尔哈朗——的监护下管理朝政。
