--- a/chinese-history/关河五十州-一寸河山一寸血.md
+++ b/chinese-history/关河五十州-一寸河山一寸血.md
@@ -42,7 +42,7 @@ DATE: 2024-02-04
 
 我们也许会希望，在人生旅途的每个时段，旁边都有这样一位仁厚而高明的长者相助，或者都有这样允许你改正的机会，那就好了，可惜不是。
 
-生，总是那么莫测难懂，我们的灵魂时时会失落，我们的内心经常被蛊惑。看着眼前一个又一个被黑夜吞没的轮廓，想想他们也曾高大，也曾无畏，也曾美丽，真有千般滋味在心头。
+人生，总是那么莫测难懂，我们的灵魂时时会失落，我们的内心经常被蛊惑。看着眼前一个又一个被黑夜吞没的轮廓，想想他们也曾高大，也曾无畏，也曾美丽，真有千般滋味在心头。
 
 抗战以来，张自忠是第一位牺牲于正面战场的集团军总司令，有诗赞曰：瞻望南瓜店前路，抗战史上第一人！
 
