--- a/中国文学.md
+++ b/中国文学.md
@@ -5,6 +5,7 @@
 | 书名                                                         | 作者   | 阅读年份 | 评价 |
 |--------------------------------------------------------------|--------|----------|------|
 | [金瓯缺（全四册）](https://book.douban.com/subject/4000908/) | 徐业兴 | 2023.04  | 优秀 |
+| [平凡的世界](https://book.douban.com/subject/10517238/)      | 路遥   | 2023.09  | 优秀 |
 
 ## 人物传记
 
