--- a/中国文学.md
+++ b/中国文学.md
@@ -1,27 +1,19 @@
 # 中国文学
 
-## 矛盾文学奖
-
 | 书名                                                         | 作者   | 阅读年份 | 评价 |
 |--------------------------------------------------------------|--------|----------|------|
+| [红顶商人胡雪岩](https://book.douban.com/subject/10605328/)  | 高阳   | 2022     | 尚可 |
 | [金瓯缺（全四册）](https://book.douban.com/subject/4000908/) | 徐业兴 | 2023.04  | 优秀 |
 | [平凡的世界](https://book.douban.com/subject/10517238/)      | 路遥   | 2023.09  | 优秀 |
+| [白鹿原](https://book.douban.com/subject/1085799/)           | 陈忠实 | 2023.14  | 优秀 |
 
-## 人物传记
-
-| 书名                                                        | 作者 | 阅读年份 | 评价 |
-|-------------------------------------------------------------|------|----------|------|
-| [红顶商人胡雪岩](https://book.douban.com/subject/10605328/) | 高阳 | 2022     | 尚可 |
-
-## 按作者
-
-### 马伯庸
+## 马伯庸
 
 | 书名           | 作者   | 阅读年份 | 评价 |
 |----------------|--------|----------|------|
-| 风起陇西       | 马伯庸 | 2022.06  | 尚可 |
-| 长安十二时辰   | 马伯庸 | 2022.05  | 尚可 |
-| 长安的荔枝     | 马伯庸 | 2022.11  | 优秀 |
 | 显微镜下的大明 | 马伯庸 | 2021     | 优秀 |
 | 两京十五日     | 马伯庸 | 2022.04  | 优秀 |
+| 长安十二时辰   | 马伯庸 | 2022.05  | 尚可 |
+| 风起陇西       | 马伯庸 | 2022.06  | 尚可 |
+| 长安的荔枝     | 马伯庸 | 2022.11  | 优秀 |
 | 太白金星有点烦 | 马伯庸 | 2023.07  | 神作 |
