--- a/中国历史.md
+++ b/中国历史.md
@@ -68,18 +68,12 @@
 
 两汉二十四帝（西汉 15 帝，东汉 14 帝）406 年，9年 ~ 25年为王莽的新朝。西汉定都长安，东汉定都洛阳。
 
-#### 西汉
-
-| 书名       | 作者 | 阅读年份 | 评价 |
-|------------|------|----------|------|
-| 嗜血的皇冠 | 曹昇 | 2022.06  | 尚可 |
-
-#### 东汉
-
-| 书名                     | 作者   | 阅读年份 | 评价 |
-|--------------------------|--------|----------|------|
-| 汉瓦：西汉王朝洪业启示录 | 刘三解 | 2022.05  | 优秀 |
-| 大汉帝国                 | 萧然   | 2022.05  | 尚可 |
+| 书名                                                  | 作者     | 阅读年份 | 评价 |
+|-------------------------------------------------------|----------|----------|------|
+| 嗜血的皇冠                                            | 曹昇     | 2022.06  | 尚可 |
+| 汉瓦：西汉王朝洪业启示录                              | 刘三解   | 2022.05  | 优秀 |
+| 大汉帝国                                              | 萧然     | 2022.05  | 尚可 |
+| [两汉风云](https://book.douban.com/subject/36238805/) | 渤海小吏 | 2024.10  | 优秀 |
 
 ### 三国两晋南北朝（220年 ~ 589年）
 
