--- a/中国历史.md
+++ b/中国历史.md
@@ -93,14 +93,15 @@
   - 北朝：439年 ~ 581年，142 年，北魏、东魏、西魏、北齐、北周等 5 朝
   - 南朝：420年 ~ 589年，169 年，包括宋、齐、梁、陈等 4 朝
 
-| 书名                                                                | 作者     | 阅读年份        | 评价 |
-|---------------------------------------------------------------------|----------|-----------------|------|
-| 三国史话                                                            | 吕思勉   | 2022.06         | 优秀 |
-| 品三国                                                              | 易中天   | 2022.07         | 优秀 |
-| [三国争霸（上、中、下）](https://book.douban.com/subject/36157153/) | 渤海小吏 | 2023.05,2024.11 | 优秀 |
-| 中国断代史系列：魏晋南北朝史                                        | 王仲荦   | 2021.06         | 优秀 |
-| 易中天中华史：南朝，北朝                                            | 易中天   | 2022.07         | 尚可 |
-| 易中天中华史：魏晋风度                                              | 易中天   | 2022.07         | 尚可 |
+| 书名                                                  | 作者     | 阅读年份        | 评价 |
+|-------------------------------------------------------|----------|-----------------|------|
+| 三国史话                                              | 吕思勉   | 2022.06         | 优秀 |
+| 品三国                                                | 易中天   | 2022.07         | 优秀 |
+| [三国争霸](https://book.douban.com/subject/36157153/) | 渤海小吏 | 2023.05,2024.11 | 优秀 |
+| [两晋悲歌](https://book.douban.com/subject/36580731/) | 渤海小吏 | 2024.12         | 优秀 |
+| 中国断代史系列：魏晋南北朝史                          | 王仲荦   | 2021.06         | 优秀 |
+| 易中天中华史：南朝，北朝                              | 易中天   | 2022.07         | 尚可 |
+| 易中天中华史：魏晋风度                                | 易中天   | 2022.07         | 尚可 |
 
 ### 隋（581年 ~ 619年）
 
