--- a/中国历史.org
+++ b/中国历史.org
@@ -1,12 +1,10 @@
-* 中国历史
+* TODO 夏
 
-** TODO 夏
+* TODO 商
 
-** TODO 商
+* TODO 西周
 
-** TODO 西周
-
-** 东周（春秋、战国）
+* 东周（春秋、战国）
 
 春秋（前770年 ~ 前476年）、战国（前475年 ~ 前221年）。
 
@@ -15,7 +13,7 @@
 | 失败者的春秋 | 刘勃 |  2024.07 | 优秀 |
 | 战国歧途     | 刘勃 |  2024.07 | 优秀 |
 
-** 秦
+* 秦
 
 前221年 ~ 前207年，3 帝，14 年，定都咸阳。
 
@@ -27,7 +25,7 @@
 | 秦崩：从秦始皇到刘邦             | 李开元   |    2022.03 | 优秀 |
 | 流血的仕途：李斯与秦帝国         | 曹昇     |    2022.05 | 尚可 |
 
-** 楚汉
+* 楚汉
 
 前207年 ~ 前202年。
 
@@ -36,7 +34,7 @@
 | 楚汉双雄           | 渤海小吏 |  2022.03 | 神作 |
 | 楚亡：从项羽到韩信 | 李开元   |  2022.04 | 优秀 |
 
-** 两汉
+* 两汉
 
 前202年 ~ 9年，25年 ~ 220年。两汉二十四帝（西汉 15 帝，东汉 14 帝）406 年，9年 ~ 25年为王莽的新朝。西汉定都长安，东汉定都洛阳。
 
@@ -47,7 +45,7 @@
 | 大汉帝国                 | 萧然     |  2022.05 | 尚可 |
 | 两汉风云                 | 渤海小吏 |  2024.10 | 优秀 |
 
-** 三国、两晋、南北朝
+* 三国、两晋、南北朝
 
 220年 ~ 589年，共历 369 年，堪称史上最黑暗的一段时间。
 
@@ -73,7 +71,7 @@
 | 易中天中华史：南朝，北朝     | 易中天   |         2022.07 | 尚可 |
 | 易中天中华史：魏晋风度       | 易中天   |         2022.07 | 尚可 |
 
-** 隋（581年 ~ 619年）
+* 隋（581年 ~ 619年）
 
 581年 ~ 619年，共历 5 帝，38 年。
 
@@ -81,7 +79,7 @@
 |----------------+------+----------+------|
 | 大隋兴衰四十年 | 蒙曼 |     2022 | 尚可 |
 
-** 唐
+* 唐
 
 共历 22 帝，289 年。中间 690 年至 705 年为武周时代。
 
@@ -101,7 +99,7 @@
 
 1. 《太平公主和她的时代》内容与《武则天》和《唐玄宗》有些是重复的，后两本看了，可以不看这本
 
-** 五代十国
+* 五代十国
 
 | 书名                   | 作者   | 阅读年份 | 评价 |
 |------------------------+--------+----------+------|
@@ -115,9 +113,8 @@
 
 - 《五代十国全史》一共 8 套，当前 <2022-12-18> 只有前 5 本
 
-** TODO 辽、夏、金
-
-** 宋
+* TODO 辽、夏、金
+* 宋
 
 906年 ~ 1279年，18 帝，319 年。
 
@@ -133,9 +130,9 @@
 | 大宋国士·北宋卷                   | 陈启文 |  2023.06 | 一般（不推荐） |
 | 大宋国士·南宋卷                   | 陈启文 |  2023.07 | 一般（不推荐） |
 
-** TODO 元
+* TODO 元
 
-** 明
+* 明
 
 1368年 ~ 1644年,16 帝，277 年。
 
@@ -153,7 +150,7 @@
 | 永历大帝           | 云石     | 2023.11.07 | 一般 |
 | 大明王朝1566       | 刘和平   | 2023.11.15 | 优秀 |
 
-** 清
+* 清
 
 1636年 ~ 1912 年，共历 12 帝，276 年。
 
@@ -166,7 +163,7 @@
 | 洪业：清朝开国史             | 美·魏斐德 | 2024.03.19 | 神作 |
 | 大变局：晚清改革五十年       | 谌旭彬    | 2024.04.16 | 优秀 |
 
-** 民国
+* 民国
 
 1912年 ~ 1949年
 
@@ -230,7 +227,7 @@
 | 历史的面孔2            | 徐涛       | 2024.06.15 | 一般 |
 | 国民党的“联共”与“反共” | 杨奎松     | 2024.08.18 | 优秀 |
 
-** 综合 & 通史
+* 综合 & 通史
 
 | 书名           | 作者   |   阅读年份 | 评价 |
 |----------------+--------+------------+------|
@@ -239,7 +236,7 @@
 | 说中国         | 许倬云 |       2021 | 优秀 |
 | 经纬华夏       | 许倬云 | 2024.02.24 | 优秀 |
 
-** 其他
+* 其他
 
 - 视频
   + [[https://movie.douban.com/subject/24736278/][河西走廊]] 2020.10-14
