--- a/中国文学.org
+++ b/中国文学.org
@@ -1,5 +1,3 @@
-* 中国文学
-
 | 书名             | 作者   | 阅读年份 | 评价 |
 |------------------+--------+----------+------|
 | 红顶商人胡雪岩   | 高阳   |     2022 | 尚可 |
@@ -7,7 +5,7 @@
 | 平凡的世界       | 路遥   |  2023.09 | 优秀 |
 | 白鹿原           | 陈忠实 |  2023.14 | 优秀 |
 
-马伯庸合集：
+*马伯庸合集*
 
 | 书名           | 作者   | 阅读年份 | 评价 |
 |----------------+--------+----------+------|
