--- a/中国历史.org
+++ b/中国历史.org
@@ -63,25 +63,19 @@
 
 | 书名                         | 作者     |        阅读年份 | 评价 |
 |------------------------------+----------+-----------------+------|
+| 中国断代史系列：魏晋南北朝史 | 王仲荦   |         2021.06 | 优秀 |
 | 三国史话                     | 吕思勉   |         2022.06 | 优秀 |
+| 易中天中华史：南朝，北朝     | 易中天   |         2022.07 | 尚可 |
 | 品三国                       | 易中天   |         2022.07 | 优秀 |
+| 易中天中华史：魏晋风度       | 易中天   |         2022.07 | 尚可 |
 | 三国争霸                     | 渤海小吏 | 2023.05,2024.11 | 优秀 |
 | 两晋悲歌                     | 渤海小吏 |         2024.12 | 优秀 |
-| 中国断代史系列：魏晋南北朝史 | 王仲荦   |         2021.06 | 优秀 |
-| 易中天中华史：南朝，北朝     | 易中天   |         2022.07 | 尚可 |
-| 易中天中华史：魏晋风度       | 易中天   |         2022.07 | 尚可 |
+| 南北归一                     | 渤海小吏 |         2025.01 | 优秀 |
 
-* 隋（581年 ~ 619年）
+* 隋唐
 
-581年 ~ 619年，共历 5 帝，38 年。
-
-| 书名           | 作者 | 阅读年份 | 评价 |
-|----------------+------+----------+------|
-| 大隋兴衰四十年 | 蒙曼 |     2022 | 尚可 |
-
-* 唐
-
-共历 22 帝，289 年。中间 690 年至 705 年为武周时代。
+隋朝：581年 ~ 619年，共历 5 帝，38 年。
+唐朝：共历 22 帝，289 年。中间 690 年至 705 年为武周时代。
 
 首都：
 
@@ -90,6 +84,7 @@
 
 | 书名                    | 作者   | 阅读年份 | 评价 |
 |-------------------------+--------+----------+------|
+| 大隋兴衰四十年          | 蒙曼   |     2022 | 尚可 |
 | 大唐兴亡三百年（全7册） | 王觉仁 |  2022.09 | 尚可 |
 | 武则天                  | 蒙曼   |  2022.11 | 尚可 |
 | 太平公主和她的时代      | 蒙曼   |  2022.11 | 一般 |
