--- a/中国历史.org
+++ b/中国历史.org
@@ -82,13 +82,14 @@
 - 东都长安
 - 西都洛阳
 
-| 书名                    | 作者   | 阅读年份 | 评价 |
-|-------------------------+--------+----------+------|
-| 大隋兴衰四十年          | 蒙曼   |     2022 | 尚可 |
-| 大唐兴亡三百年（全7册） | 王觉仁 |  2022.09 | 尚可 |
-| 武则天                  | 蒙曼   |  2022.11 | 尚可 |
-| 太平公主和她的时代      | 蒙曼   |  2022.11 | 一般 |
-| 唐玄宗                  | 蒙曼   |  2022.11 | 尚可 |
+| 书名                    | 作者     | 阅读年份 | 评价 |
+|-------------------------+----------+----------+------|
+| 大隋兴衰四十年          | 蒙曼     |     2022 | 尚可 |
+| 大唐兴亡三百年（全7册） | 王觉仁   |  2022.09 | 尚可 |
+| 武则天                  | 蒙曼     |  2022.11 | 尚可 |
+| 太平公主和她的时代      | 蒙曼     |  2022.11 | 一般 |
+| 唐玄宗                  | 蒙曼     |  2022.11 | 尚可 |
+| 大唐气象                | 渤海小吏 |  2025.03 | 优秀 |
 
 备注：
 
