--- a/中国文学.org
+++ b/中国文学.org
@@ -15,3 +15,4 @@
 | 风起陇西       | 马伯庸 |  2022.06 | 尚可 |
 | 长安的荔枝     | 马伯庸 |  2022.11 | 优秀 |
 | 太白金星有点烦 | 马伯庸 |  2023.07 | 神作 |
+| 食南之徒       | 马伯庸 |  2025.03 | 优秀 |
