--- a/中国文学.org
+++ b/中国文学.org
@@ -7,12 +7,13 @@
 
 *马伯庸合集*
 
-| 书名           | 作者   | 阅读年份 | 评价 |
-|----------------+--------+----------+------|
-| 显微镜下的大明 | 马伯庸 |     2021 | 优秀 |
-| 两京十五日     | 马伯庸 |  2022.04 | 优秀 |
-| 长安十二时辰   | 马伯庸 |  2022.05 | 尚可 |
-| 风起陇西       | 马伯庸 |  2022.06 | 尚可 |
-| 长安的荔枝     | 马伯庸 |  2022.11 | 优秀 |
-| 太白金星有点烦 | 马伯庸 |  2023.07 | 神作 |
-| 食南之徒       | 马伯庸 |  2025.03 | 优秀 |
+| 书名              | 作者   | 阅读年份 | 评价 |
+|-------------------+--------+----------+------|
+| 显微镜下的大明    | 马伯庸 |     2021 | 优秀 |
+| 两京十五日        | 马伯庸 |  2022.04 | 优秀 |
+| 长安十二时辰      | 马伯庸 |  2022.05 | 尚可 |
+| 风起陇西          | 马伯庸 |  2022.06 | 尚可 |
+| 长安的荔枝        | 马伯庸 |  2022.11 | 优秀 |
+| 太白金星有点烦    | 马伯庸 |  2023.07 | 神作 |
+| 食南之徒          | 马伯庸 |  2025.03 | 优秀 |
+| 大医（日出+破晓） | 马伯庸 |  2025.05 | 优秀 |
