--- a/中国历史.org
+++ b/中国历史.org
@@ -231,6 +231,7 @@
 | 万古江河       | 许倬云 |       2021 | 神作 |
 | 说中国         | 许倬云 |       2021 | 优秀 |
 | 经纬华夏       | 许倬云 | 2024.02.24 | 优秀 |
+| 中国通史       | 傅乐成 | 2025-05-19 | 优秀 |
 
 * 其他
 
