--- a/世界文学.org
+++ b/世界文学.org
@@ -1,2 +1,11 @@
 
 *村上春树合集*
+
+| 书名                     |      阅读年份 | 评价 |
+|--------------------------+---------------+------|
+| 且听风吟                 |          2015 | 尚可 |
+| 挪威的森林               |          2015 | 优秀 |
+| 海边的卡夫卡             |          2015 | 优秀 |
+| 1Q84                     |          2015 | 优秀 |
+| 我的职业是小说家         |          2016 | 优秀 |
+| 当我谈跑步时，我谈些什么 | 2016, 2025.05 | 优秀 |
