--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+begin_quote
-为天地立心，为生民立命；为往圣继绝学，为万世开太平。
+士不可以不弘毅
 #+end_quote
 
 *Spec：*
@@ -9,6 +9,13 @@
     + L1 -> L2 -> L3 -> L4 按照分类细分
     + 读完按时间标记，类似 =2024 读完=
 - 评价：神作 -> 优秀 -> 尚可 -> 一般。
+
+
+*Methodology：*
+
+- 运动&开车：听书，爽文
+- 旅途：电子书，轻松的文学、小说
+- 书房：纸质书，严肃的大块头
 
 *Checklist：*
 
