--- a/中国文学.org
+++ b/中国文学.org
@@ -18,3 +18,9 @@
 | 太白金星有点烦    | 马伯庸 |  2023.07 | 神作 |
 | 食南之徒          | 马伯庸 |  2025.03 | 优秀 |
 | 大医（日出+破晓） | 马伯庸 |  2025.05 | 优秀 |
+
+*爽文*
+
+| 书名         | 作者       | 阅读年份 |
+|--------------+------------+----------|
+| 老子是癞蛤蟆 | 烽火戏诸侯 |  2025.05 |
