--- a/中国历史.org
+++ b/中国历史.org
@@ -44,6 +44,7 @@
 | 汉瓦：西汉王朝洪业启示录 | 刘三解   |  2022.05 | 优秀 |
 | 大汉帝国                 | 萧然     |  2022.05 | 尚可 |
 | 两汉风云                 | 渤海小吏 |  2024.10 | 优秀 |
+| 汉兴：从吕后到汉文帝     | 李开元   |  2025.07 | 优秀 |
 
 * 三国、两晋、南北朝
 
