--- a/中国文学.org
+++ b/中国文学.org
@@ -21,6 +21,7 @@
 
 *爽文*
 
-| 书名         | 作者       | 阅读年份 |
-|--------------+------------+----------|
-| 老子是癞蛤蟆 | 烽火戏诸侯 |  2025.05 |
+| 书名           | 作者       | 阅读年份 |
+|----------------+------------+----------|
+| 老子是癞蛤蟆   | 烽火戏诸侯 |  2025.05 |
+| 少年白马醉春风 | 周木楠     |  2025.06 |
