--- a/中国历史.org
+++ b/中国历史.org
@@ -45,6 +45,7 @@
 | 大汉帝国                 | 萧然     |  2022.05 | 尚可 |
 | 两汉风云                 | 渤海小吏 |  2024.10 | 优秀 |
 | 汉兴：从吕后到汉文帝     | 李开元   |  2025.07 | 优秀 |
+| 汉帝国的建立与刘邦集团   | 李开元   |  2025.08 | 优秀 |
 
 * 三国、两晋、南北朝
 
