--- a/中国文学.org
+++ b/中国文学.org
@@ -25,3 +25,4 @@
 |----------------+------------+----------|
 | 老子是癞蛤蟆   | 烽火戏诸侯 |  2025.05 |
 | 少年白马醉春风 | 周木楠     |  2025.06 |
+| 少年歌行       | 周木楠     |  2025.07 |
