--- a/中国历史.org
+++ b/中国历史.org
@@ -24,6 +24,7 @@
 | 舍不得看完的中国史：秦并天下     | 渤海小吏 |         2022.03 | 神作 |
 | 秦崩：从秦始皇到刘邦             | 李开元   | 2022.03,2025.06 | 优秀 |
 | 流血的仕途：李斯与秦帝国         | 曹昇     |         2022.05 | 尚可 |
+| 秦谜：重新发现秦始皇             | 李开元   |         2025.08 | 优秀 |
 
 * 楚汉
 
