--- a/中国历史.org
+++ b/中国历史.org
@@ -236,6 +236,12 @@
 | 经纬华夏       | 许倬云 | 2024.02.24 | 优秀 |
 | 中国通史       | 傅乐成 | 2025-05-19 | 优秀 |
 
+* 史记 & 资治通鉴
+
+| 书名                       | 作者 | 阅读年份 | 评价 |
+|----------------------------+------+----------+------|
+| 白话版资治通鉴（全十八部） | 柏杨 |          |      |
+
 * 其他
 
 - 视频
