--- a/中国文学.org
+++ b/中国文学.org
@@ -27,3 +27,4 @@
 | 少年白马醉春风 | 周木楠     |  2025.06 |
 | 少年歌行       | 周木楠     |  2025.07 |
 | 君有云         | 周木楠     |  2025.08 |
+| 大道朝天       | 猫腻       |  2025.11 |
